--- a/content/projects/2. CEO Stock Options and Firm Risk-taking.md
+++ b/content/projects/2. CEO Stock Options and Firm Risk-taking.md
@@ -7,6 +7,8 @@ description: Lorem Etiam Nullam
 draft: false
 image: pic09.jpg
 keywords: ""
-slug: magna
-title: Magna
+slug: thesis
+title: Bachelor Thesis: How CEO Stock Options affect Firm Risk-taking
 ---
+
+Notes,....
