--- a/content/projects/3. Tfl Bike Analysis.md
+++ b/content/projects/3. Tfl Bike Analysis.md
@@ -7,6 +7,9 @@ description: Nullam et orci eu lorem consequat tincidunt vivamus et sagittis mag
 draft: false
 image: pic08.jpg
 keywords: ""
-slug: tempus
-title: Tempus
+slug: tflbikes
+title: Tfl Bikes Analysis
 ---
+
+
+bikes.....
