--- a/content/projects/4. IMDB.md
+++ b/content/projects/4. IMDB.md
@@ -8,7 +8,7 @@ draft: false
 image: pic07.jpg
 keywords: ""
 slug: IMDB
-title: IMDB Ratings Analysis
+title: IMDb Ratings Analysis
 ---
 
 movies.....
