--- a/content/projects/1.Online Team Collaboration Research.md
+++ b/content/projects/1.Online Team Collaboration Research.md
@@ -1,3 +1,4 @@
+
 ---
 categories:
 - ""
@@ -8,7 +9,7 @@ draft: false
 image: pic10.jpg
 keywords: ""
 slug: teamcollab
-title: Ipsum
+title: Online Team Collaboration
 ---
 
 Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.
