--- a/content/projects/1.Online Team Collaboration Research.md
+++ b/content/projects/1.Online Team Collaboration Research.md
@@ -12,4 +12,4 @@ slug: teamcollab
 title: Online Team Collaboration
 ---
 
-Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.
+WORK In Progress
