--- a/content/projects/2. CEO Stock Options and Firm Risk-taking.md
+++ b/content/projects/2. CEO Stock Options and Firm Risk-taking.md
@@ -8,7 +8,7 @@ draft: false
 image: pic09.jpg
 keywords: ""
 slug: thesis
-title: Bachelor Thesis_How CEO Stock Options affect Firm Risk-taking
+title: How CEO Stock Options affect Firm Risk-taking
 ---
 
-Notes,....
+WORK In Progress
