--- a/content/projects/1.Online Team Collaboration Research.md
+++ b/content/projects/1.Online Team Collaboration Research.md
@@ -6,7 +6,7 @@ categories:
 date: "2017-10-31T21:28:43-05:00"
 description: ""
 draft: false
-image: pic10.jpg
+image: collaboration.png
 keywords: ""
 slug: teamcollab
 title: Online Team Collaboration
