--- a/content/projects/4. IMDB.md
+++ b/content/projects/4. IMDB.md
@@ -7,7 +7,7 @@ description: Nullam et orci eu lorem consequat tincidunt vivamus et sagittis mag
 draft: false
 image: movies1.jpg
 keywords: ""
-slug: IMDB
+slug: imdb
 title: IMDb Ratings Analysis
 ---
 
