--- a/content/whatiread/whatiread.Rmd
+++ b/content/whatiread/whatiread.Rmd
@@ -25,3 +25,8 @@ How CEO Stock Options affect Firm Risk-taking
 How CEO Stock Options affect Firm Risk-taking
 How CEO Stock Options affect Firm Risk-taking
 How CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-takingHow CEO Stock Options affect Firm Risk-taking
+
+```{r profile_pic, echo=FALSE, out.width="100%"}
+knitr::include_graphics(here::here("static", "obstacle.jpg"), error = FALSE)
+```
+
