--- a/content/aboutme/aboutme.Rmd
+++ b/content/aboutme/aboutme.Rmd
@@ -27,5 +27,5 @@ library(grid)
 
 
 ```{r profile_pic, echo=FALSE, out.width="100%"}
-knitr::include_graphics(here::here("static", "aboutme.jpg"), error = FALSE)
+knitr::include_graphics(here::here("static/aboutme","aboutme.jpg"), error = FALSE)
 ```
