--- a/content/aboutme/aboutme.Rmd
+++ b/content/aboutme/aboutme.Rmd
@@ -12,7 +12,7 @@ slug: aboutme
 title: My Background and Interests
 ---
 
-```{r add_my_new_picture, echo=FALSE, out.width="50%",fig.width=1,fig.height=1}
+```{r profile_pic, echo=FALSE, out.width="50%",fig.width=1,fig.height=1,fig.align="center"}
 knitr::include_graphics("/img/pic01.jpg", error = FALSE)
 ```
 
