--- a/content/whatiread/whatiread.Rmd
+++ b/content/whatiread/whatiread.Rmd
@@ -11,7 +11,9 @@ slug: whatiread
 title: How CEO Stock Options affect Firm Risk-taking
 ---
 
-![](aboutme.jpg)
+```{r profile_pic, echo=FALSE, out.width="50%",fig.width=1,fig.height=1,fig.align="left"}
+knitr::include_graphics("/img/pic02.jpg", error = FALSE)
+```
 
 Test!!!!!!
 How CEO Stock Options affect Firm Risk-taking
