--- a/content/projects/bikess.Rmd
+++ b/content/projects/bikess.Rmd
@@ -1,29 +1,60 @@
 ---
-categories:
-- ""
-- ""
-date: "2017-10-31T22:26:13-05:00"
-description: Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.
-draft: false
+title: "Tfl Bikes Analyss"
+date: '2017-10-31T22:26:13-05:00'
+description: Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna
+  sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa
+  sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem
+  consequat tincidunt. Vivamus et sagittis tempus.
+draft: no
 image: bikes.jpg
-keywords: ""
+keywords: ''
 slug: tflbikes
-title: Tfl Bikes Analyss
+categories:
+- ''
+- ''
 ---
+
+```{r, setup, include=FALSE}
+knitr::opts_chunk$set(
+  message = FALSE, 
+  warning = FALSE, 
+  tidy=FALSE,     # display code as typed
+  size="small")   # slightly smaller font for code
+options(digits = 3)
+
+# default figure size
+knitr::opts_chunk$set(
+  fig.width=6.75, 
+  fig.height=6.75,
+  fig.align = "center"
+)
+```
+
+
+```{r load-libraries, warning=FALSE, message=FALSE, include=FALSE}
+library(tidyverse)  # Load ggplot2, dplyr, and all the other tidyverse packages
+library(mosaic)
+library(ggthemes)
+library(lubridate)
+library(fivethirtyeight)
+library(here)
+library(skimr)
+library(janitor)
+library(vroom)
+library(tidyquant)
+library(rvest)
+library(purrr)  
+library(lubridate)
+library(tidytext)
+library(patchwork)
+```
 
 
 Recall the TfL data on how many bikes were hired every single day. We can get the latest data by running the following
 
 ```{r, get_tfl_data, cache=TRUE}
-url <- "https://data.london.gov.uk/download/number-bicycle-hires/ac29363e-e0cb-47cc-a97a-e216d900a6b0/tfl-daily-cycle-hires.xlsx"
+bike0 <- read_csv(here::here("data", "bikes.csv"))
 
-# Download TFL data to temporary file
-httr::GET(url, write_disk(bike.temp <- tempfile(fileext = ".xlsx")))
-
-# Use read_excel to read it as dataframe
-bike0 <- read_excel(bike.temp,
-                   sheet = "Data",
-                   range = cell_cols("A:B"))
 
 # change dates to get year, month, and week
 bike <- bike0 %>% 
@@ -32,6 +63,8 @@ bike <- bike0 %>%
   mutate (year = year(day),
           month = lubridate::month(day, label = TRUE),
           week = isoweek(day))
+
+bike
 ```
 
 
@@ -42,7 +75,7 @@ We can easily create a facet grid that plots bikes hired by month and year.
 knitr::include_graphics(here::here("static/aboutme", "tfl_distributions_monthly.png"), error = FALSE)
 ```
 
-```{r, get_tfl_data, cache=TRUE}
+```{r, get_tfl_dat, cache=TRUE}
 #We first start by calculating the historic monthly average between 2015 and 2019
 historic_average <- bike %>%
   filter(year %in% c(2015,2016,2017,2018,2019))%>%
@@ -93,7 +126,7 @@ plot_monthly_average_bike
 #file.show(paste(getwd(),"/plot_monthly_average_bike.pdf",sep=""), title="Tfl Monthly")
 ```
 
-```{r,get_tfl_data, cache=TRUE}
+```{r,get_tfl_d, cache=TRUE}
 knitr::include_graphics(here::here("images", "tfl_weekly.png"), error = FALSE)
 library(grid)
 
