pushing resized books

--- a/content/whatiread/whatiread.Rmd
+++ b/content/whatiread/whatiread.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "How CEO Stock Options affect Firm Risk-taki"
 date: '2017-10-31T22:26:09-05:00'
-description: Lorem Etiam Nullam
+description: ''
 draft: no
-image: thesis.jpg
+image: reading.jpg
 keywords: ''
 slug: whatiread
 categories:
@@ -11,10 +11,10 @@ categories:
 - ''
 ---
     
-```{r obstacles_pic, echo=FALSE, out.width="10%",fig.width=1,fig.height=1,fig.align="left"}
+```{r obstacles_pic, echo=FALSE, out.width="20%",fig.width=1,fig.height=1,fig.align="left"}
 knitr::include_graphics("/img/pic02.jpg", error = FALSE)
 ```
 
-```{r sleep_pic, echo=FALSE, out.width="10%",fig.width=0.1,fig.height=0.1,fig.align="right"}
+```{r sleep_pic, echo=FALSE, out.width="20%",fig.width=0.1,fig.height=0.1,fig.align="right"}
 knitr::include_graphics("/img/pic03.jpg", error = FALSE)
 ```
