--- a/content/whatiread/whatiread.Rmd
+++ b/content/whatiread/whatiread.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "How CEO Stock Options affect Firm Risk-taki"
+title: "Books I find compelling"
 date: '2017-10-31T22:26:09-05:00'
 description: ''
 draft: no
