--- a/content/projects/bikess.Rmd
+++ b/content/projects/bikess.Rmd
@@ -47,11 +47,14 @@ library(purrr)
 library(lubridate)
 library(tidytext)
 library(patchwork)
+library(grid)
 ```
 
 
-Recall the TfL data on how many bikes were hired every single day. We can get the latest data by running the following
+In this project, I analyse how COVID-19 has impacted inner-city bike travel. As a former cyclist myself, I am always interested in these insights in particular because many road bikes in London are sold out due to high demand and heavy supply chain disruption during the COVID-19 crisis which is still ongoing during the time I publish this project.
 
+
+We first begin by gathering the data.
 ```{r, get_tfl_data, cache=TRUE}
 bike0 <- read_csv(here::here("data", "bikes.csv"))
 
@@ -72,8 +75,11 @@ bike
 We can easily create a facet grid that plots bikes hired by month and year.
 
 ```{r tfl_month_year_grid, echo=FALSE, out.width="100%"}
-knitr::include_graphics(here::here("static/aboutme", "tfl_distributions_monthly.png"), error = FALSE)
+knitr::include_graphics(here::here("/img/tfl_distributions_monthly.png"), error = FALSE)
 ```
+
+We can already see the high level impact COVID-19 has had on Tfl Bike travel. 
+
 
 ```{r, get_tfl_dat, cache=TRUE}
 #We first start by calculating the historic monthly average between 2015 and 2019
@@ -126,11 +132,10 @@ plot_monthly_average_bike
 #file.show(paste(getwd(),"/plot_monthly_average_bike.pdf",sep=""), title="Tfl Monthly")
 ```
 
+From this graph we can see the monthly average since 2015 with the blue line and the amount of bikes hired per month for each respective year with the black line. Clearly, 2020 has been an unusual year for bike travel.
+
+
 ```{r,get_tfl_d, cache=TRUE}
-knitr::include_graphics(here::here("images", "tfl_weekly.png"), error = FALSE)
-library(grid)
-
-
 #We first start by calculating the historic weekly average between 2015 and 2019
 historic_weeklyaverage <- bike %>%
   filter(year %in% c(2015,2016,2017,2018,2019))%>%
@@ -194,18 +199,7 @@ plot_weekly_difference <- weekly_difference %>%
   facet_wrap(~year)
 
 plot_weekly_difference
-#Saved as a PDF to improve image quality and increase the size of the plot for readability  
-#ggsave("plot_weekly_difference.pdf", width = 15,height=10)
-
-#file.show(paste(getwd(),"/plot_weekly_difference.pdf",sep=""), title="Tfl Weekly")
-  
-#panel.background = element_rect(fill="grey")
-#geom_rect(data = rects_fill,aes(xmin = xstart, xmax = xend, ymin = Inf, ymax = Inf))+
- 
 
 ```
 
-
- 
-
-```
+Using weekly data, we can precisely see which time periods were unusual. In particular, we can see that bike travel decreased significantly during the COVID lockdown but rebounded above the average post-lockdown as the bike was more attractive than traveling in the subway.
