--- a/content/projects/bikess.Rmd
+++ b/content/projects/bikess.Rmd
@@ -1,10 +1,8 @@
 ---
-title: "Tfl Bikes Analyss"
+title: "Tfl Bikes Analysis"
 date: '2017-10-31T22:26:13-05:00'
-description: Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna
-  sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa
-  sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem
-  consequat tincidunt. Vivamus et sagittis tempus.
+description: In this project, I have analysed the impact of COVID-19 on Tfl bike travel
+  as part of my Data Analytics for Finance course at London Business School.
 draft: no
 image: bikes.jpg
 keywords: ''
