--- a/content/projects/IMDB.Rmd
+++ b/content/projects/IMDB.Rmd
@@ -1,14 +1,15 @@
 ---
-categories:
-- ""
-- ""
-date: "2017-10-31T22:42:51-05:00"
-description: Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.
-draft: false
+title: "IMDb Ratings Analysis"
+date: '2017-10-31T22:42:51-05:00'
+description: As a fan of movies, I analyse the relation between IMDB ratings and movie
+  chracteristics.
+draft: no
 image: movies1.jpg
-keywords: ""
+keywords: ''
 slug: imdb
-title: IMDb Ratings Analysis
+categories:
+- ''
+- ''
 ---
 
 
@@ -50,7 +51,7 @@ library(patchwork)
 
 # Analysis of movies - IMDB dataset
 
-As a big fan of movies, I couldn't stop myself from analysing the impact of IMDB ratings. This is exactly what this project is about. We will find out the effect of IMDB ratings on gross revenue, on tickets sold, etc. Have fun reading!
+As a big fan of movies, I'm always happy to have a closer look at IMDB ratings. In this project, I compare movie characteristics with rating and then I zoom in on two well-known directors.
   
 ```{r,load_movies, warning=FALSE, message=FALSE}
 movies <- read_csv(here::here("data", "movies.csv"))
