--- a/content/projects/bikess.Rmd
+++ b/content/projects/bikess.Rmd
@@ -72,8 +72,8 @@ bike
 
 We can easily create a facet grid that plots bikes hired by month and year.
 
-```{r tfl_month_year_grid, out.width="100%"}
-knitr::include_graphics(here::here("/img/tfl_distributions_monthly.png"), error = FALSE)
+```{r tfl_month_year_gr, out.width="100%"}
+knitr::include_graphics(here::here("/img/tfl.png"), error = FALSE)
 ```
 
 We can already see the high level impact COVID-19 has had on Tfl Bike travel. 
