--- a/content/projects/CEOOP.Rmd
+++ b/content/projects/CEOOP.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "How CEO Stock Options affect Firm Risk-taking"
 date: '2017-10-31T22:26:09-05:00'
-description: Lorem Etiam Nullam
+description: At the end of my Bachelor, I conducted academic research on the effect
+  of CEO Stock Options on firm risk-taking.
 draft: no
 image: thesis.jpg
 keywords: ''
